auth/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: auth
              servicePort: 9000
            path: /login
          - backend:
              serviceName: auth
              servicePort: 9000
            path: /register
          - backend:
              serviceName: auth
              servicePort: 9000
            path: /logout
          - backend:
              serviceName: auth
              servicePort: 9000
            path: /check-auth
